# dvt_chatbot

./: .env.example  Makefile  README.md  answer_engine.py  app.py  custom_answers.yaml  dvt_chatbot_test_checklist.md  dvt_guide_data.json  dvt_guide_data_with_embeddings.json  dvt_guide_seeds.txt  pyproject.toml  requirements-dev.txt  requirements.txt  search_cli.py  search_engine.py  setup.py  setup.sh  test_cosine_check.py  test_dvt_guide_data.py  test_dvt_guide_data_with_embeddings.py  test_validate_embeddings.py
data/: dvt_guide_data.json  dvt_guide_data2.json  dvt_guide_data_with_embeddings.json
dvt_chatbot/: answer_engine.py  app.py  config.py  embed_dvt_guide.py  scrape_dvt_guide.py  scrape_dvt_guide2.py  scrape_dvt_guide3.py  scrape_dvt_guide_orig.py  search_cli.py  search_engine.py
dvt_chatbot/templates/: index.html
templates/: index.html  index.html:Zone.Identifier
tests/: test_answer_engine.py  test_app_cli.py  test_app_web.py
